--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Melody Muse</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    
 </head>
 <body>
-    
+    <h1 class="text-3xl font-bold underline">
+        Hello world!
+      </h1>
+   
+  
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
