--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <title>Melody Muse</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"
+  ></script>
     
 </head>
 <body>
     <h1 class="text-3xl font-bold underline">
-        Hello world!
+        Dogs are Neat!
       </h1>
    
   
