--- a/index.html
+++ b/index.html
@@ -6,19 +6,29 @@
     <title>Melody Muse</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"
-  ></script>
-    
+
 </head>
 <body>
-    <h1 class="text-3xl font-bold underline">
+    <h1 class="text-3xl font-bold underline flex items-center justify-center">
         Dogs are Neat!
       </h1>
+      <div>
+        <input type="text" id="breedInput" placeholder="Enter dog breed">
+        <button id="searchButton">Search</button>
+      </div>
+   <div class="grid grid-rows-1 grid-flow-col gap-4" id="breedImage">
+    <div class="max-w-sm rounded overflow-hidden shadow-lg"><img id="card-0" src="" alt="Dog Image 1"></div>
+    <div class="max-w-sm rounded overflow-hidden shadow-lg"><img id="card-1" src="" alt="Dog Image 2"></div>
+    <div class="max-w-sm rounded overflow-hidden shadow-lg"><img id="card-2" src="" alt="Dog Image 3"></div>
+     </div>
    
-  
+   
+     <script
+     src="https://code.jquery.com/jquery-3.5.1.min.js"
+     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+     crossorigin="anonymous"
+   ></script>
+     
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
