--- a/index.html
+++ b/index.html
@@ -19,30 +19,35 @@
     Unleash the Facts: A Comprehensive Guide to Dog Breeds
   </h1>
   <div class="flex items-center justify-center pb-6">
-    <input type="text" id="breedInput" placeholder="Enter dog breed" class="border border-gray-300 rounded-md px-4 py-2 focus:border-blue-500 hover:border-blue-500">
+    <input type="text" id="breedInput" placeholder="Enter dog breed"
+      class="border border-gray-300 rounded-md px-4 py-2 focus:border-blue-500 hover:border-blue-500">
     <button id="searchButton" class="font-semibold pl-4">Search</button>
   </div>
   <div class="grid grid-rows-1 grid-flow-col gap-2 justify-center" id="breedImage">
-    <div id="0" class="hidden max-w-sm rounded overflow-hidden shadow-lg"><img id="card-0" src="" alt="Dog Image 1"></div>
-    <div id="1" class="hidden max-w-sm rounded overflow-hidden shadow-lg"><img id="card-1" src="" alt="Dog Image 2"></div>
-    <div id="2" class="hidden max-w-sm rounded overflow-hidden shadow-lg"><img id="card-2" src="" alt="Dog Image 3"></div>
+    <div id="0" class="hidden max-w-sm rounded overflow-hidden shadow-lg"><img id="card-0" onclick="modal.showModal()" src="" alt="Dog Image 1">
+    </div>
+    <div id="1" class="hidden max-w-sm rounded overflow-hidden shadow-lg"><img id="card-1" onclick="modal.showModal()" src="" alt="Dog Image 2">
+    </div>
+    <div id="2" class="hidden max-w-sm rounded overflow-hidden shadow-lg"><img id="card-2" onclick="modal.showModal()" src="" alt="Dog Image 3">
+    </div>
   </div>
-<!-- Modal container -->
-<!-- <div id="modal" class="hidden inset-0 items-center justify-center bg-black bg-opacity-50">
+  <!-- Modal container -->
+  <!-- <div id="modal" class="hidden inset-0 items-center justify-center bg-black bg-opacity-50">
   <div class="modal-content bg-white p-4 max-w-md mx-auto">  Breed information will be displayed here 
   </div>
 </div> -->
-<dialog id="modal" class="modal modal-bottom sm:modal-middle">
-  <form method="dialog" class="modal-box">
-    <h3 class="modal-content font-bold text-lg">Hello!</h3>
-    <p class="py-4">Press ESC key or click the button below to close</p>
-    <div class="modal-action">
-      <!-- if there is a button in form, it will close the modal -->
-      <button class="btn">Close</button>
-    </div>
-  </form>
-</dialog>
-   
+  <!-- <button class="btn" onclick="modal.showModal()">open modal</button> -->
+  <dialog id="modal" class="modal modal-bottom sm:modal-middle">
+    <form method="dialog" class="modal-box">
+      <h3 class="modal-content font-bold text-lg">Hello!</h3>
+      <p class="py-4">Press ESC key or click the button below to close</p>
+      <div class="modal-action">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </div>
+    </form>
+  </dialog>
+
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
