--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
   <div>
     <h2>Your Top 3 Breeds:</h2>
       <ul id="fav-breed">
+        <li id="fav-0">Baba</li>
+        <li id="fav-1"></li>
+        <li id="fav-2"></li>
       </ul>
   </div>
   <!-- Modal container -->
