add extra facts list. implement 2nd API

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div>
     <h2>Your Top 3 Breeds:</h2>
       <ul id="fav-breed">
-        <li id="fav-0">Baba</li>
+        <li id="fav-0"></li>
         <li id="fav-1"></li>
         <li id="fav-2"></li>
       </ul>
@@ -62,5 +62,7 @@
 
   <script src="./assets/js/script.js"></script>
 </body>
-
+<footer>
+  
+</footer>
 </html>
