Added a banner that will suggest a random breed every 5 seconds. Functionality on lines 135 to 155.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 </div> -->
   <!-- <button class="btn" onclick="modal.showModal()">open modal</button> -->
-  <dialog id="modal" class="modal modal-bottom sm:modal-middle">
+  <dialog id="modal" class="modal modal-bottom sm:modal-middle text-white">
     <form method="dialog" class="modal-box">
       <h3 id="breedTitle" class="modal-content font-bold text-lg"></h3>
       <p id="breedHeight" class="py-4"></p>
@@ -63,6 +63,12 @@
   <script src="./assets/js/script.js"></script>
 </body>
 <footer>
-  
+  <div id="banner-container" class="text-white py-5 my-3">
+    <div id="breed-card">
+      <h3>Suggested Breeds:</h3>
+      <p id="card-name"></p>
+      <p id="card-bred-for"></p>
+    </div>
+  </div>
 </footer>
 </html>
