--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 </div> -->
   <!-- <button class="btn" onclick="modal.showModal()">open modal</button> -->
-  <dialog id="modal" class="modal modal-bottom sm:modal-middle bg-black text-white">
+  <dialog id="modal" class="modal modal-bottom sm:modal-middle">
     <form method="dialog" class="modal-box">
       <h3 id="breedTitle" class="modal-content font-bold text-lg"></h3>
       <p id="breedHeight" class="py-4"></p>
