--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 </div> -->
   <!-- <button class="btn" onclick="modal.showModal()">open modal</button> -->
-  <dialog id="modal" class="modal modal-bottom sm:modal-middle">
+  <dialog id="modal" class="bg-white modal modal-bottom sm:modal-middle">
     <form method="dialog" class="modal-box">
       <h3 id="breedTitle" class="modal-content font-bold text-lg"></h3>
       <p id="breedHeight" class="py-4"></p>
@@ -63,6 +63,6 @@
   <script src="./assets/js/script.js"></script>
 </body>
 <footer>
-  
+
 </footer>
 </html>
