add tailwind styling to top 3, add emojis

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/daisyui@3.5.0/dist/full.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="./assets/tailwind.config.js">
   <link rel="stylesheet" href="./assets/css/style.css" />
-
+  
 </head>
 
 <body>
@@ -18,14 +18,15 @@
 
     Unleash the Facts: A Comprehensive Guide to Dog Breeds
   </h1>
+  <p class="text-base flex items-center justify-center mb-4">*after searching, click the dog's image to generate more info*<span style='font-size:80px;'>&#128021;</span></p>
   <div class="flex items-center justify-center pb-6">
     <input type="text" id="breedInput" placeholder="Enter dog breed"
       class="border border-gray-300 rounded-md px-4 py-2 focus:border-blue-500 hover:border-blue-500">
-    <button id="searchButton" class="font-semibold pl-4">Search</button>
+    <button id="searchButton" class="font-semibold pl-4">Search </button>
   </div>
   <div>
-    <h2 class="mt-4 ml-4">Your Top 3 Breeds:</h2>
-      <ul id="fav-breed">
+    <h2 class="ml-4 mb-2">&#128062;Your Top 3 Breeds:</h2>
+      <ul class="ml-4 mb-4" id="fav-breed">
         <li id="fav-0"></li>
         <li id="fav-1"></li>
         <li id="fav-2"></li>
