--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
   <dialog id="no_breed_modal" class="modal modal-bottom sm:modal-middle">
     <form method="dialog" class="modal-box">
-      <h3 class="font-bold text-lg text-white">Error!</h3>
-      <p id="modal-error-message" class="py-4 text-white"></p>
-      <p class="py-4 text-white">Try searching one of the random breeds.</p>
+      <h3 class="font-bold text-lg text-red-600">Error!</h3>
+      <p id="modal-error-message" class="py-4 text-red-600"></p>
+      <p class="py-4 text-red-600">Try searching one of the random breeds.</p>
       <div class="modal-action">
         <!-- if there is a button in form, it will close the modal -->
         <button class="btn">Close</button>
